change heading title

--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -1,7 +1,7 @@
 <section *ngIf="books; else loading">
   <div class="grid-x">
     <div class="cell medium-10 medium-offset-2 title-heading">
-      <h2>Popular books testing<span class="line"></span></h2>
+      <h2>Developer Books<span class="line"></span></h2>
     </div>
   </div>
   <div class="books">
